--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       <li><a href="{{ site.rss }}" class="socialAccount socialAccount--rss" target="_blank"></a></li>
     </ul>
     <div>
-      © 2016 All Rights Reserved. Powered by the <a href="https://github.com/vincentchan/mickey" target="_blank">Mickey theme</a> for Jekyll.
+      © 2016 All Rights Reserved. Powered by the <a href="https://github.com/najus/mickey" target="_blank">Mickey theme</a> for Jekyll.
     </div>
   </div>
 </footer>
