google analytics added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,5 +22,9 @@
     {% endif %}
 
     {% include footer-scripts.html %}
+    {% include footer.html %}
+    {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
   </body>
 </html>
