--- a/_includes/content.html
+++ b/_includes/content.html
@@ -8,6 +8,10 @@
     <a href="http://stackoverflow.com/users/story/819014">Programming</a>
   </li>
   <li class="main-list-item">
+    <span class="fa fa-camera fa-lg main-list-item-icon"></span>
+    <a href="https://photos.thapasujan.com/">Photos</a>
+  </li>
+  <li class="main-list-item">
     <span class="fa fa-instagram fa-lg main-list-item-icon"></span>
     <a href="https://www.instagram.com/najusujan/">Photos</a>
   </li>
