Update email contact

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -19,4 +19,8 @@
     <span class="fa fa-linkedin fa-lg main-list-item-icon"></span>
     <a href="https://www.linkedin.com/in/thapasujan">Resume</a>
   </li>
+  <li class="main-list-item">
+    <span class="fa fa-envelope fa-lg main-list-item-icon"></span>
+    <a href="mailto:najussujan@gmail.com" target="_top">Contact</a>
+  </li>
 </ul>
