update email icon to medium size

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -20,7 +20,7 @@
     <a href="https://www.linkedin.com/in/thapasujan">Resume</a>
   </li>
   <li class="main-list-item">
-    <span class="fa fa-envelope fa-lg main-list-item-icon"></span>
+    <span class="fa fa-envelope fa-md main-list-item-icon"></span>
     <a href="mailto:najussujan@gmail.com" target="_top">Contact</a>
   </li>
 </ul>
