update instagram link and photo blog description

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -9,11 +9,11 @@
   </li>
   <li class="main-list-item">
     <span class="fa fa-camera fa-md main-list-item-icon"></span>
-    <a href="http://photos.thapasujan.com/">Photos</a>
+    <a href="http://photos.thapasujan.com/">Photo Blog</a>
   </li>
   <li class="main-list-item">
     <span class="fa fa-instagram fa-lg main-list-item-icon"></span>
-    <a href="https://www.instagram.com/najusujan/">More Photos</a>
+    <a href="https://www.instagram.com/najusphoto/">More Photos</a>
   </li>
   <li class="main-list-item">
     <span class="fa fa-linkedin fa-lg main-list-item-icon"></span>
