--- a/_includes/content.html
+++ b/_includes/content.html
@@ -9,7 +9,7 @@
   </li>
   <li class="main-list-item">
     <span class="fa fa-camera fa-md main-list-item-icon"></span>
-    <a href="http://photos.thapasujan.com/">Photo Blog</a>
+    <a href="http://photos.sujanthapa.com/">Photo Blog</a>
   </li>
   <li class="main-list-item">
     <span class="fa fa-instagram fa-lg main-list-item-icon"></span>
